Navigation mobile bug #31

--- a/shared/components/Contact/ContactForm.less
+++ b/shared/components/Contact/ContactForm.less
@@ -4,7 +4,8 @@
 @import '../../assets/typography.less';
 
 .ContactForm__Card {
-  padding: 16px;
+  padding: 8px;
+  width: 100%;
 }
 
 .ContactForm__input-container {
