--- a/shared/components/HomeList/HomeList.less
+++ b/shared/components/HomeList/HomeList.less
@@ -8,13 +8,10 @@
   margin: 40px auto 0px;
 }
 
-.HomeList__grid {
-}
-
 .HomeList__card {
   color: @additional-text-color;
+  width: 100%;
   padding: 0px 16px;
-  margin: 0px auto;
 }
 
 .HomeListCard__head {
